# sshbox

./: .env-example  README.md  pyproject.toml
src/sshbox/: json_config.py  main.py
tests/: test_json_config.py
