[project]
name = "sshbox"
version = "0.1.0"
description = "Manage SSH Connections"
authors = [
    {name = "kwilt", email = "kwilt@pm.me"},
]
dependencies = [
    "click>=8.1.7",
    "python-dotenv>=1.0.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.3",
]
[project.scripts]
sshbox = "sshbox.main:cli"
