[project]
name = "sshbox"
version = "0.3.0"
description = "CLI for managing SSH connections using JSON configuration"
authors = [
    {name = "kwilt", email = "kwilt@pm.me"},
]

dependencies = [
    "click>=8.1.7",
    "python-dotenv>=1.0.1",
]

requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
sshbox = "sshbox.main:cli"

[tool.pdm]
distribution = false

